k8s/01_configuration.yaml
# Here i configure the namespace for the cluster
apiVersion: v1
kind: Namespace
metadata:
  name: kii-project
